@@ -5,12 +5,12 @@ echo "==============================================="
 
 echo
 echo "Compiling Java files..."
-javac *.java
+javac --module-path /usr/share/openjfx/lib --add-modules javafx.controls,javafx.fxml *.java
 
 if [ $? -ne 0 ]; then
     echo
     echo "ERROR: Compilation failed!"
-    echo "Please check that you have Java installed and all files are present."
+    echo "Please check that you have Java and JavaFX installed and all files are present."
     read -p "Press Enter to continue..."
     exit 1
 fi
@@ -21,17 +21,14 @@ echo
 echo "Starting Castle Defense game..."
 echo
 
-java CastleDefense
+java --module-path /usr/share/openjfx/lib --add-modules javafx.controls,javafx.fxml CastleDefense
 
 if [ $? -ne 0 ]; then
     echo
     echo "ERROR: Game execution failed!"
-    echo "This might be due to JavaFX not being available."
+    echo "This might be due to JavaFX not being properly configured."
     echo
-    echo "For Java 11+: You need to download JavaFX separately"
-    echo "Visit: https://openjfx.io/"
-    echo
-    echo "For Java 8-10: JavaFX should be included by default"
+    echo "Make sure JavaFX is installed: sudo apt install openjfx"
     read -p "Press Enter to continue..."
     exit 1
 fi
